--- a/styles.css
+++ b/styles.css
@@ -7,3 +7,11 @@
   max-width: 400px;
 }
 
+.icon img{
+  position: relative;
+  top: -50px;
+  border-radius: 50%;
+  width: 100px;
+  margin-bottom: -50px;
+  background-color: rgb(255, 255, 255);;
+}
